# autotarefas

./: .coveragerc  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AutoTarefas_Cronograma.docx  AutoTarefas_Estrutura.docx  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Configuracao_Pacote.docx  Deploy_GitHub_Pages.docx  Guias_Usuario_AutoTarefas.docx  LICENCE  LICENSE  Publicacao_PyPI.docx  README.md  SECURITY.md  Setup_MkDocs.docx  Versionamento.docx  contatos.csv  dashboard_exemplo.html  mkdocs.yml  pyproject.toml  relatorio.csv  requirements-dev.txt  requirements-lock.txt  requirements.txt  server.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  lint.yml  publish.yml  tests.yml
api/: __init__.py  main.py  models.py
backups/: cli_backup_20251207_010402.json
cloud/: __init__.py  base.py  dropbox_storage.py  google_drive.py  s3_storage.py
docs/: COVERAGE_POLICY.md  architecture.md  arquitetura.md  comandos.md  configuracao.md  desenvolvimento.md  index.md  quickstart.md  referencia.md
docs/api/: README.md  base.md  cli.md  core.md  index.md  tasks.md
docs/desenvolvimento/: arquitetura.md  changelog.md  configuracao_pacote.md  contribuindo.md  index.md  publicacao_pypi.md
docs/guias/: backup.md  cleaner.md  cloud.md  email.md  index.md  monitor.md  scheduler.md
docs/live/: app.js  index.html  style.css
docs/live/assets/: dashboard.html  runs.json
docs/planejamento/: ARQUITETURA.md  CRONOGRAMA.md  ESTRUTURA_PASTAS.md  MAPEAMENTO_ARQUIVOS_FASES.md  PROGRESSO.md  REQUISITOS.md  TECNOLOGIAS.md
docs/tutorials/: getting-started.md  instalacao.md  uso-basico.md
examples/: backup_example.py  capture_runs.py  cleaner_example.py  database_backup_plugin.py  logging_plugin.py  monitor_example.py  organizer_example.py  quickstart.py  scheduler_example.py  slack_plugin.py
examples/fixtures/: clientes.csv  organize_rules.yaml  schema_clientes.yaml
examples/fixtures/desorganizado/: dados.csv
frontend/: index.html
live_demo/backend/: Dockerfile  README.md  requirements.txt
live_demo/backend/app/: catalog.py  config.py  demo_servers.py  engine.py  jobs.py  main.py  ratelimit.py  recipes.py  samples.py  sanitize.py  streaming.py  uploads.py
live_demo/backend/tests/: conftest.py  test_engine.py  test_streaming.py
live_demo/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
live_demo/frontend/src/: App.tsx  index.css  main.tsx
plugins/: __init__.py  base.py  hooks.py  manager.py  registry.py
scripts/: bump_version.py  check_coverage.py
src/autotarefas/: __init__.py  __main__.py  config.py
src/autotarefas/cli/: __init__.py  console.py  context.py  helpers.py  main.py
src/autotarefas/core/: __init__.py  audit.py  base.py  browser.py  email.py  exceptions.py  logger.py  notifier.py  scheduler.py  security.py  settings.py
src/autotarefas/dashboard/: __init__.py  reader.py  renderer.py
src/autotarefas/profiling/: __init__.py  metrics.py  profiler.py  report.py  result.py
src/autotarefas/reader/: __init__.py  normalize.py  result.py  table_detect.py  types.py  workbook.py
src/autotarefas/tasks/: __init__.py  artifacts.py  backup.py  cleaner.py  cleaning.py  cloud_backup.py  duplicates.py  extract_api.py  extract_artifacts.py  extract_web.py  issues.py  monitor.py  organize.py  organizer.py  report.py  report_audit.py  report_xlsx.py  reporter.py  rpa_cadastro.py  sales_report.py  send_api.py  send_artifacts.py  send_email.py  send_result.py  send_telegram.py  sync_api.py  validate.py  validators.py  validators_br.py
src/autotarefas/utils/: __init__.py  datetime_utils.py  format_utils.py  helpers.py  json_utils.py
tests/: __init__.py  conftest.py  test_backup.py  test_base.py  test_cleaner.py  test_config.py  test_email.py  test_job_store.py  test_logger.py  test_monitor.py  test_notifier.py  test_organizer.py  test_reporter  test_run_history.py  test_scheduler.py  test_utils.py
tests/cli/: test_analisar_arquitetura.py  test_analisar_cli.py  test_backup_cli.py  test_console.py  test_context.py  test_dashboard_cli.py  test_extract_cli.py  test_extract_web_cli.py  test_helpers.py  test_init.py  test_main.py  test_organize_cli.py  test_report_cli.py  test_rpa_cli.py  test_send_cli.py  test_send_email_cli.py  test_send_telegram_cli.py  test_sync_cli.py  test_validate_cli.py
tests/core/: test_audit.py  test_base.py  test_base_audit.py  test_browser.py  test_exceptions.py  test_logger.py  test_security.py  test_settings.py
tests/dashboard/: test_reader.py  test_renderer.py
tests/e2e/: __init__.py  conftest.py  test_cli_backup.py  test_cli_cleaner.py  test_cli_email.py  test_cli_main.py  test_cli_monitor.py  test_cli_organizer.py  test_cli_report.py  test_cli_scheduler.py  test_extract_web_js_e2e.py
tests/fixtures/planilhas/: build_fixtures.py
tests/integration/: __init__.py  conftest.py  test_backup_integration.py  test_cleaner_integration.py  test_email_integration.py  test_monitor_integration.py  test_organizer_integration.py  test_scheduler_integration.py
tests/profiling/: test_arquitetura_profiling.py  test_metrics.py  test_profiler.py
tests/reader/: test_arquitetura.py  test_normalize.py  test_result.py  test_table_detect.py  test_types.py  test_workbook.py
tests/tasks/: test_artifacts.py  test_backup.py  test_cleaning.py  test_duplicates.py  test_extract_api.py  test_extract_artifacts.py  test_extract_web.py  test_extract_web_js.py  test_issues.py  test_organize.py  test_report.py  test_report_audit.py  test_report_xlsx.py  test_rpa_cadastro.py  test_send_api.py  test_send_artifacts.py  test_send_email.py  test_send_result.py  test_send_telegram.py  test_sync_api.py  test_validate.py  test_validate_extended.py  test_validators.py  test_validators_br.py
tests/tools/demo_server/: __init__.py  test_app.py  test_catalogo.py  test_catalogo_js.py  test_storage.py  test_telegram_mock.py
tools/: __init__.py  smtp_debug.py
tools/demo_server/: README.md  __init__.py  __main__.py  app.py  storage.py
(+66 files in other folders)
