[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotarefas"
version = "0.1.0"
description = "Automação de processos repetitivos em Python"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
  { name = "Paulo Lavarini", email = "paulo.lavarini@gmail.com" }
]
keywords = ["automation", "tasks", "scheduler", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

# Dependências mínimas para rodar o core
dependencies = [
  "click>=8.1.7",
  "python-dotenv>=1.0.1",
  "loguru>=0.7.2",
  "schedule>=1.2.2",
  "psutil>=6.0.0"
]

[project.urls]
Homepage = "https://github.com/paulor007/autotarefas"
Repository = "https://github.com/paulor007/autotarefas.git"
Issues = "https://github.com/paulor007/autotarefas/issues"

[project.scripts]
autotarefas = "autotarefas.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "black>=24.10.0",
  "isort>=5.13.2",
  "flake8>=7.1.1",
  "mypy>=1.11.2",
  "pre-commit>=3.8.0"
]
excel = [
  "pandas>=2.2.0",
  "openpyxl>=3.1.5"
]
email = [
  "yagmail>=0.15.0"
]
watch = [
  "watchdog>=3.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autotarefas = ["py.typed"]

# -------- Ferramentas --------

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
| \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
| venv
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", "venv", ".venv"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.pytest.ini_options]
minversion = "8.0"
addopts = """
  -ra -q
  --strict-markers
  --cov=src/autotarefas
  --cov-report=html
  --cov-report=term-missing
  --cov-fail-under=80
"""
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.coverage.run]
branch = true
source = ["src/autotarefas"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
